tests/parser-test-files/bad-files/define-class.2.error
error: Malformed class definition
  --> test:4:15
   |
 4 |  (define-class (=> C :a :b))
   |                 ^^ unnecessary `=>`
help: remove `=>`
 4 | (define-class (C :a :b))
   |               ---------
